--- a/src/data_analysis/analise_dados.ipynb
+++ b/src/data_analysis/analise_dados.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,20 +27,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Arquivo de dados do Micromouse Evolutivo\\n', '\\n', 'Generation: 0.000000\\n', '\\n', '20.00 20.00 20.00 31.00 20.00 20.00 20.00 20.00 20.00 24.00 ']\n",
-      "[['20.00', '20.00', '20.00', '31.00', '20.00', '20.00', '20.00', '20.00', '20.00', '24.00']]\n"
+      "/home/tommaselli/Documentos/c_projects/Sistemas_evolutivos/Trabalho_final/SistEvolutivos/src/data.txt\n"
      ]
     }
    ],
    "source": [
-    "f = open('dados.txt')\n",
+    "import os\n",
+    "\n",
+    "path = os.getcwd().replace('/data_analysis', '') + '/data.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Arquivo de dados do Micromouse Evolutivo\\n', '\\n', 'Generation: 0\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 2.90 ']\n",
+      "[['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '2.90']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(path)\n",
     "\n",
     "lines = list()\n",
     "for data in f:\n",
@@ -60,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
