sistema de arquivos melhorado

--- a/src/data_analysis/analise_dados.ipynb
+++ b/src/data_analysis/analise_dados.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 218,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/tommaselli/Documentos/c_projects/Sistemas_evolutivos/Trabalho_final/SistEvolutivos/src/data.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -46,15 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Arquivo de dados do Micromouse Evolutivo\\n', '\\n', 'Generation: 0\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 2.90 ']\n",
-      "[['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '2.90']]\n"
+      "['Arquivo de dados do Micromouse Evolutivo\\n', 'TAMPOP = 10\\tMAX_INFO_LEN = 10\\n', '\\n', 'Generation: 0\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 2.90 \\n', '\\n', 'Generation: 1\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 20.90 \\n', '\\n', 'Generation: 2\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 200.90 ']\n",
+      "[['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '2.90'], ['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '20.90'], ['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '200.90']]\n",
+      "2\n"
      ]
     }
    ],
@@ -67,23 +60,66 @@
     "\n",
     "print(lines)\n",
     "\n",
-    "fitness = list()\n",
+    "# TAMPOP e MAX_INFO_LEN\n",
+    "TAMPOP = lines[1].split('\\t')[0].split(' ')[2]\n",
+    "MAX_INFO_LEN = lines[1].split('\\t')[1].split(' ')[2]\n",
     "\n",
-    "# gen 1\n",
-    "fitness.append(lines[4].split())\n",
+    "# fitness function\n",
+    "fitness = list()\n",
+    "for gen in range(0,100):\n",
+    "    try:\n",
+    "        fitness.append(lines[lines.index('Generation: ' + str(gen) + '\\n') + 2].split())\n",
+    "    except ValueError:\n",
+    "        gen -= 1\n",
+    "        break\n",
     "\n",
     "print(fitness)\n",
+    "print(gen)\n",
     "\n",
     "f.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2]\n",
+      "['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '2.90']\n",
+      "['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '20.90']\n",
+      "['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '200.90']\n",
+      "['3.00', '2.40', '3.00', '3.00', '2.40', '3.00', '3.00', '2.40', '3.00']\n",
+      "['3.00', '2.40', '3.00', '3.00', '2.40', '3.00', '3.00', '2.40', '3.00']\n",
+      "['3.00', '2.40', '3.00', '3.00', '2.40', '3.00', '3.00', '2.40', '3.00']\n"
+     ]
+    }
+   ],
    "source": [
-    "# fazer plotagem"
+    "# fazer plotagem\n",
+    "\n",
+    "# eixo X\n",
+    "X = list()\n",
+    "for i in range(0,gen + 1):\n",
+    "    X.append(i)\n",
+    "\n",
+    "print(X)\n",
+    "\n",
+    "# eixo Y (em andamento ainda)\n",
+    "\n",
+    "y0 = y1 = y2 = list()\n",
+    "for fit in fitness:\n",
+    "    print(fit)\n",
+    "    y0.append(fit[0])\n",
+    "    y1.append(fit[1])\n",
+    "    y2.append(fit[2])\n",
+    "\n",
+    "print(y0)\n",
+    "print(y1)\n",
+    "print(y2)"
    ]
   }
  ],
