melhorando a interface C e Python

--- a/src/data_analysis/analise_dados.ipynb
+++ b/src/data_analysis/analise_dados.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Arquivo de dados do Micromouse Evolutivo\\n', 'TAMPOP = 10\\tMAX_INFO_LEN = 10\\n', '\\n', 'Generation: 0\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 2.90 \\n', '\\n', 'Generation: 1\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 20.90 \\n', '\\n', 'Generation: 2\\n', '\\n', '3.00 2.40 3.00 2.90 2.90 2.70 2.90 2.40 3.00 200.90 ']\n",
-      "[['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '2.90'], ['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '20.90'], ['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '200.90']]\n",
+      "['Arquivo de dados do Micromouse Evolutivo\\n', 'TAMPOP = 10\\tMAX_INFO_LEN = 10\\n', '\\n', 'Generation: 0\\n', '\\n', '2.90 2.90 2.50 2.80 2.50 2.90 3.00 3.00 2.80 3.00 \\n', '\\n', 'Generation: 1\\n', '\\n', '20.90 20.90 20.50 20.80 20.50 20.90 30.00 30.00 20.80 30.00 \\n', '\\n', 'Generation: 2\\n', '\\n', '200.90 200.90 200.50 200.80 200.50 200.90 300.00 300.00 200.80 300.00 ']\n",
+      "[['2.90', '2.90', '2.50', '2.80', '2.50', '2.90', '3.00', '3.00', '2.80', '3.00'], ['20.90', '20.90', '20.50', '20.80', '20.50', '20.90', '30.00', '30.00', '20.80', '30.00'], ['200.90', '200.90', '200.50', '200.80', '200.50', '200.90', '300.00', '300.00', '200.80', '300.00']]\n",
       "2\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -89,18 +89,19 @@
      "output_type": "stream",
      "text": [
       "[0, 1, 2]\n",
-      "['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '2.90']\n",
-      "['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '20.90']\n",
-      "['3.00', '2.40', '3.00', '2.90', '2.90', '2.70', '2.90', '2.40', '3.00', '200.90']\n",
-      "['3.00', '2.40', '3.00', '3.00', '2.40', '3.00', '3.00', '2.40', '3.00']\n",
-      "['3.00', '2.40', '3.00', '3.00', '2.40', '3.00', '3.00', '2.40', '3.00']\n",
-      "['3.00', '2.40', '3.00', '3.00', '2.40', '3.00', '3.00', '2.40', '3.00']\n"
+      "['2.90', '2.90', '2.50', '2.80', '2.50', '2.90', '3.00', '3.00', '2.80', '3.00']\n",
+      "2.90\n",
+      "['20.90', '20.90', '20.50', '20.80', '20.50', '20.90', '30.00', '30.00', '20.80', '30.00']\n",
+      "20.90\n",
+      "['200.90', '200.90', '200.50', '200.80', '200.50', '200.90', '300.00', '300.00', '200.80', '300.00']\n",
+      "200.90\n",
+      "['2.90', '20.90', '200.90']\n",
+      "['2.90', '20.90', '200.90']\n",
+      "['2.50', '20.50', '200.50']\n"
      ]
     }
    ],
    "source": [
-    "# fazer plotagem\n",
-    "\n",
     "# eixo X\n",
     "X = list()\n",
     "for i in range(0,gen + 1):\n",
@@ -110,9 +111,10 @@
     "\n",
     "# eixo Y (em andamento ainda)\n",
     "\n",
-    "y0 = y1 = y2 = list()\n",
+    "y0 = list()\n",
+    "y1 = list()\n",
+    "y2 = list()\n",
     "for fit in fitness:\n",
-    "    print(fit)\n",
     "    y0.append(fit[0])\n",
     "    y1.append(fit[1])\n",
     "    y2.append(fit[2])\n",
